--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC 
 
-NEXT_PUBLIC_MAILCHIMP_URL = https://gmail.us21.list-manage.com/subscribe/post?u=376d5dcdeecd094c4efd1e419&amp;
+
+REACT_APP_MAILCHIMP_U = 376d5dcdeecd094c4efd1e419
+REACT_APP_MAILCHIMP_ID = 81de093c5e
