--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
-
+API_KEY=2044741c07a27d268da78db9423f6843-us21
 
 REACT_APP_MAILCHIMP_U = 376d5dcdeecd094c4efd1e419
 REACT_APP_MAILCHIMP_ID = 81de093c5e
+
+REACT_MAILCHIMP_URL="https://gmail.us21.list-manage.com/subscribe/post?u=376d5dcdeecd094c4efd1e419&amp;id=81de093c5e&amp;f_id=0096d3e1f0"
