--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-webpack-plugin": "^4.0.1"
   }
 }
